2009-06-30  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/40542
	* gcc.dg/vect/pr40542.c: New test.

2009-06-29  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40579
	* gcc.c-torture/execute/pr40579.c: New testcase.

2009-06-28  Uros Bizjak  <ubizjak@gmail.com>

	PR tree-optimization/40550
	* gcc.dg/pr40550.c: New test.

2009-06-25  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/32041
	* gcc.dg/pr32041.c: New test.
	* g++.dg/parse/offsetof9.C: New test.

	2008-09-28  Andrew Pinski  <andrew_pinski@playstation.sony.com>
		Kaushal Kantawala  <kaushal_kantawala@playstation.sony.com>

	PR tree-optimization/36891
	* gcc.dg/torture/pr36891.c: New testcase.

2009-06-22  Matthias Klose  <doko@ubuntu.com>

	PR objc/28050
	* pr28050.m: New testcase.

2009-06-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2009-02-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR C++/36607
	* g++.dg/expr/cast10.C: New test.

	2009-05-20  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40204
	* gcc.c-torture/compile/pr40204.c: New test.

	2009-02-03  Jakub Jelinek  <jakub@redhat.com>
 
	PR target/35318
	* gcc.c-torture/compile/pr35318.c: New test.

2009-06-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2009-02-20  Jakub Jelinek  <jakub@redhat.com>

	PR target/39240
	* gcc.c-torture/execute/pr39240.c: New test.

2009-06-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2009-01-30  Jakub Jelinek  <jakub@redhat.com>

	PR target/39013
	* gcc.target/i386/pr39013-1.c: New test.
	* gcc.target/i386/pr39013-2.c: New test.

	2009-04-22  Jakub Jelinek  <jakub@redhat.com>

	PR c/39855
	* gcc.dg/torture/pr39855.c: New test.

2009-06-18  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-06-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/40470
	* gcc.dg/torture/pr40470-1.c: New.
	* gcc.dg/torture/pr40470-2.c: Likewise.